--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@muravjev/configs-eslint-ts": "^0.1.5",
+    "@nextui-org/react": "^2.1.13",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -26,6 +27,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "framer-motion": "^10.16.4",
     "install": "^0.13.0",
     "lucide-react": "^0.282.0",
     "next": "latest",
