--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -32,7 +32,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "services/dashboard/create-project-form"
   ],
   "exclude": [
     "node_modules"
