--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "framer-motion": "^10.16.4",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.282.0",
     "next": "latest",
     "next-themes": "^0.2.1",
