--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.10.4",
     "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.4",
     "axios": "^1.5.1",
     "babel-eslint": "^10.1.0",
     "class-variance-authority": "^0.7.0",
@@ -32,7 +33,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "framer-motion": "^10.16.4",
-    "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.282.0",
     "next": "latest",
