--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@muravjev/configs-eslint-ts": "^0.1.5",
+    "@nextui-org/progress": "^2.0.21",
     "@nextui-org/react": "^2.1.13",
+    "@nextui-org/system": "^2.0.10",
+    "@nextui-org/theme": "^2.1.9",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -21,6 +24,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.10.4",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.4",
