--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 DB_URL="host=db user=postgres password=postgres dbname=postgres port=5432 sslmode=disable"
 JWT_SECRET="SOME EXTREMELY SAFE SECRET"
+
+
+CORS_ALLOW_ORIGIN="http://localhost:3000"
