--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-version: 3.2.0
+version: "3"
 
 services:
   backend:
+    container_name: backend
     build:
       context: .
       dockerfile: docker/Dockerfile
@@ -13,6 +14,7 @@ services:
       - db
 
   db:
+    container_name: backend-db
     image: postgres:latest
     environment:
       POSTGRES_DB: postgres
