fix: localStorage sessionToken

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -32,7 +32,7 @@ spec:
             - containerPort: 8080
           resources: {}
           volumeMounts:
-            - mountPath: /root/app
+            - mountPath: /root
               name: backend-claim0
       imagePullSecrets:
         - name: regcred
